--- a/app/card.html
+++ b/app/card.html
@@ -626,7 +626,7 @@
 										<div class="card-main-block-description-row-item card-main-block-description-row-item-ul-horiz">
 											<div class="card-main-block-description-row-item-ul-horiz_wrapper">
 												<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="2" data-cost="9000">Экокожа</div></div>
-												<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div>
+												<!-- <div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div> -->
 												<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="4" data-cost="5000">Ткань</div></div>
 											</div>
 										</div>
@@ -1284,7 +1284,7 @@
 								<div class="card-main-block-description-row-item card-main-block-description-row-item-ul-horiz">
 									<div class="card-main-block-description-row-item-ul-horiz_wrapper">
 										<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="2" data-cost="9000">Экокожа</div></div>
-										<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div>
+										<!-- <div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div> -->
 										<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="4" data-cost="5000">Ткань</div></div>
 									</div>
 								</div>
@@ -1554,6 +1554,11 @@
 										<div class="tabs-container-list-item-innercontainer-side-text-block__head">Комментарий:</div>
 										<div class="tabs-container-list-item-innercontainer-side-text-block__main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates aperiam, rem, beatae tempora aut doloribus excepturi fugiat distinctio, quis in deserunt illum eveniet? Animi aperiam cupiditate natus nihil, earum voluptatibus culpa. Vel mollitia ipsam unde neque officia omnis corrupti praesentium autem magni, molestiae doloremque dolores sequi repellat quas architecto.</div>
 									</div>
+									<div class="tabs-container-list-item-innercontainer-side-gallery">
+										<a data-fancybox="gallery" href="img/about-img-1.png"><img src="img/about-img-1.png"></a>
+										<a data-fancybox="gallery" href="img/about-img-2.png"><img src="img/about-img-2.png"></a>
+										<a data-fancybox="gallery" href="img/about-img-2.png"><img src="img/about-img-2.png"></a>
+									</div>
 								</div>
 								<div class="commentary-input">
 									<form>
@@ -1675,6 +1680,20 @@
 							<div class="tabs-container-list-item-innercontainer">
 								<div class="tabs-container-list-item-innercontainer-side tabs-container-list-item-innercontainer-side-table">
 									<div class="tabs-container-list-item-innercontainer-side-material">
+										<div class="fabrics-filter-column-row-value">
+											<select class="fabrics-filter-select" multiple placeholder="Выбрать ценовую категорию">
+												<option value="">1-ая категория ткани</option>
+												<option value="">2-ая категория ткани</option>
+												<option value="">3-ая категория ткани</option>
+												<option value="">4-ая категория ткани</option>
+												<option value="">5-ая категория ткани</option>
+												<option value="">6-ая категория ткани</option>
+												<option value="">7-ая категория ткани</option>
+												<option value="">8-ая категория ткани</option>
+												<option value="">9-ая категория ткани</option>
+												<option value="">10-ая категория ткани</option>
+											</select>
+										</div>
 										<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Софа (замша)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
 											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
