--- a/app/designers.html
+++ b/app/designers.html
@@ -576,6 +576,8 @@
 							<div class="designers-projects-btn-wrapper">
 								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ ДИВАН</a>
 								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ КРЕСЛО</a>
+								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ ПУФЫ</a>
+								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ АКССЕСУАРЫ</a>
 							</div>
 						</div>
 						<div class="designers-projects ptb25">
@@ -622,6 +624,8 @@
 							<div class="designers-projects-btn-wrapper">
 								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ ДИВАН</a>
 								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ КРЕСЛО</a>
+								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ ПУФЫ</a>
+								<a href="#" class="card-item-row-item__button designers-projects-btn">СМОТРЕТЬ АКССЕСУАРЫ</a>
 							</div>
 						</div>
 						<div class="catalog-main-show-more catalog-main-show-more_modified designers-projects-btn-wrapper">
