--- a/app/discount.html
+++ b/app/discount.html
@@ -516,15 +516,6 @@
 					</div>
 					<div class="discont-row">
 						<div class="discont-row-item">
-							<div class="discont-row-item-gallery-mini">
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-							</div>
-						</div>
-						<div class="discont-row-item">
 							<div class="discont-row-item-gallery-big">
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -567,6 +558,25 @@
 									</div>
 								</div>
 							</div>
+							<div class="discont-row-item-gallery-mini-wrapper">
+								<div class="discont-row-item-gallery-mini">
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>								
+							</div>
 						</div>
 						<div class="discont-row-item">
 							<div class="discont-row-item-row">Коллекция: <span class="discont-row-item-row_name">Souls</span></div>
@@ -588,8 +598,8 @@
 							</div>
 						</div>
 						<div class="discont-row-item">
-							<div class="discont-row-item-row">
-								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ДОБАВИТЬ В КОРЗИНУ</a>
+							<div class="discont-row-item-row discont-row-item-row_wrap">
+								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ЗАБРОНИРОВАТЬ</a>
 								<div class="discont-row-item-row-cost">
 									<div class="discont-row-item-row-cost__old"><span class="line-through">47 800</span> ₽</div>
 									<div class="discont-row-item-row-cost__new">35 700 ₽</div>
@@ -659,15 +669,6 @@
 					</div>
 					<div class="discont-row">
 						<div class="discont-row-item">
-							<div class="discont-row-item-gallery-mini">
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-							</div>
-						</div>
-						<div class="discont-row-item">
 							<div class="discont-row-item-gallery-big">
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -684,7 +685,6 @@
 											<path d="M26.8439 7.45475C26.4514 3.13476 23.3937 0.000517141 19.5671 0.000517141C17.0177 0.000517141 14.6834 1.37243 13.3699 3.57121C12.0683 1.34399 9.82975 0 7.32121 0C3.49507 0 0.436841 3.13424 0.0448667 7.45423C0.0138397 7.64505 -0.113371 8.64929 0.273432 10.287C0.830884 12.6492 2.1185 14.7978 3.99615 16.4991L13.3637 25L22.8921 16.4996C24.7698 14.7978 26.0574 12.6497 26.6148 10.287C27.0016 8.64981 26.8744 7.64557 26.8439 7.45475ZM25.608 10.0502C25.0992 12.2076 23.9196 14.1731 22.2002 15.7307L13.3699 23.609L4.69116 15.7328C2.96864 14.1721 1.78962 12.2071 1.28026 10.0496C0.91414 8.49984 1.06462 7.62437 1.06514 7.61868L1.07289 7.56645C1.40902 3.78167 4.03649 1.03423 7.32121 1.03423C9.74494 1.03423 11.8786 2.52353 12.8911 4.92036L13.3673 6.04923L13.8436 4.92036C14.8401 2.56024 17.0864 1.03475 19.5676 1.03475C22.8518 1.03475 25.4798 3.78219 25.8226 7.61609C25.8236 7.62437 25.9741 8.50036 25.608 10.0502Z" fill="black"/>
 										</svg>
 									</div>
-
 								</div>
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -693,7 +693,6 @@
 											<path d="M26.8439 7.45475C26.4514 3.13476 23.3937 0.000517141 19.5671 0.000517141C17.0177 0.000517141 14.6834 1.37243 13.3699 3.57121C12.0683 1.34399 9.82975 0 7.32121 0C3.49507 0 0.436841 3.13424 0.0448667 7.45423C0.0138397 7.64505 -0.113371 8.64929 0.273432 10.287C0.830884 12.6492 2.1185 14.7978 3.99615 16.4991L13.3637 25L22.8921 16.4996C24.7698 14.7978 26.0574 12.6497 26.6148 10.287C27.0016 8.64981 26.8744 7.64557 26.8439 7.45475ZM25.608 10.0502C25.0992 12.2076 23.9196 14.1731 22.2002 15.7307L13.3699 23.609L4.69116 15.7328C2.96864 14.1721 1.78962 12.2071 1.28026 10.0496C0.91414 8.49984 1.06462 7.62437 1.06514 7.61868L1.07289 7.56645C1.40902 3.78167 4.03649 1.03423 7.32121 1.03423C9.74494 1.03423 11.8786 2.52353 12.8911 4.92036L13.3673 6.04923L13.8436 4.92036C14.8401 2.56024 17.0864 1.03475 19.5676 1.03475C22.8518 1.03475 25.4798 3.78219 25.8226 7.61609C25.8236 7.62437 25.9741 8.50036 25.608 10.0502Z" fill="black"/>
 										</svg>
 									</div>
-
 								</div>
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -702,7 +701,6 @@
 											<path d="M26.8439 7.45475C26.4514 3.13476 23.3937 0.000517141 19.5671 0.000517141C17.0177 0.000517141 14.6834 1.37243 13.3699 3.57121C12.0683 1.34399 9.82975 0 7.32121 0C3.49507 0 0.436841 3.13424 0.0448667 7.45423C0.0138397 7.64505 -0.113371 8.64929 0.273432 10.287C0.830884 12.6492 2.1185 14.7978 3.99615 16.4991L13.3637 25L22.8921 16.4996C24.7698 14.7978 26.0574 12.6497 26.6148 10.287C27.0016 8.64981 26.8744 7.64557 26.8439 7.45475ZM25.608 10.0502C25.0992 12.2076 23.9196 14.1731 22.2002 15.7307L13.3699 23.609L4.69116 15.7328C2.96864 14.1721 1.78962 12.2071 1.28026 10.0496C0.91414 8.49984 1.06462 7.62437 1.06514 7.61868L1.07289 7.56645C1.40902 3.78167 4.03649 1.03423 7.32121 1.03423C9.74494 1.03423 11.8786 2.52353 12.8911 4.92036L13.3673 6.04923L13.8436 4.92036C14.8401 2.56024 17.0864 1.03475 19.5676 1.03475C22.8518 1.03475 25.4798 3.78219 25.8226 7.61609C25.8236 7.62437 25.9741 8.50036 25.608 10.0502Z" fill="black"/>
 										</svg>
 									</div>
-
 								</div>
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -711,8 +709,26 @@
 											<path d="M26.8439 7.45475C26.4514 3.13476 23.3937 0.000517141 19.5671 0.000517141C17.0177 0.000517141 14.6834 1.37243 13.3699 3.57121C12.0683 1.34399 9.82975 0 7.32121 0C3.49507 0 0.436841 3.13424 0.0448667 7.45423C0.0138397 7.64505 -0.113371 8.64929 0.273432 10.287C0.830884 12.6492 2.1185 14.7978 3.99615 16.4991L13.3637 25L22.8921 16.4996C24.7698 14.7978 26.0574 12.6497 26.6148 10.287C27.0016 8.64981 26.8744 7.64557 26.8439 7.45475ZM25.608 10.0502C25.0992 12.2076 23.9196 14.1731 22.2002 15.7307L13.3699 23.609L4.69116 15.7328C2.96864 14.1721 1.78962 12.2071 1.28026 10.0496C0.91414 8.49984 1.06462 7.62437 1.06514 7.61868L1.07289 7.56645C1.40902 3.78167 4.03649 1.03423 7.32121 1.03423C9.74494 1.03423 11.8786 2.52353 12.8911 4.92036L13.3673 6.04923L13.8436 4.92036C14.8401 2.56024 17.0864 1.03475 19.5676 1.03475C22.8518 1.03475 25.4798 3.78219 25.8226 7.61609C25.8236 7.62437 25.9741 8.50036 25.608 10.0502Z" fill="black"/>
 										</svg>
 									</div>
-
 								</div>
+							</div>
+							<div class="discont-row-item-gallery-mini-wrapper">
+								<div class="discont-row-item-gallery-mini">
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>								
 							</div>
 						</div>
 						<div class="discont-row-item">
@@ -735,8 +751,8 @@
 							</div>
 						</div>
 						<div class="discont-row-item">
-							<div class="discont-row-item-row">
-								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ДОБАВИТЬ В КОРЗИНУ</a>
+							<div class="discont-row-item-row discont-row-item-row_wrap">
+								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ЗАБРОНИРОВАТЬ</a>
 								<div class="discont-row-item-row-cost">
 									<div class="discont-row-item-row-cost__old"><span class="line-through">47 800</span> ₽</div>
 									<div class="discont-row-item-row-cost__new">35 700 ₽</div>
@@ -806,15 +822,6 @@
 					</div>
 					<div class="discont-row">
 						<div class="discont-row-item">
-							<div class="discont-row-item-gallery-mini">
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-							</div>
-						</div>
-						<div class="discont-row-item">
 							<div class="discont-row-item-gallery-big">
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -857,6 +864,25 @@
 									</div>
 								</div>
 							</div>
+							<div class="discont-row-item-gallery-mini-wrapper">
+								<div class="discont-row-item-gallery-mini">
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>								
+							</div>
 						</div>
 						<div class="discont-row-item">
 							<div class="discont-row-item-row">Коллекция: <span class="discont-row-item-row_name">Souls</span></div>
@@ -878,8 +904,8 @@
 							</div>
 						</div>
 						<div class="discont-row-item">
-							<div class="discont-row-item-row">
-								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ДОБАВИТЬ В КОРЗИНУ</a>
+							<div class="discont-row-item-row discont-row-item-row_wrap">
+								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ЗАБРОНИРОВАТЬ</a>
 								<div class="discont-row-item-row-cost">
 									<div class="discont-row-item-row-cost__old"><span class="line-through">47 800</span> ₽</div>
 									<div class="discont-row-item-row-cost__new">35 700 ₽</div>
@@ -949,15 +975,6 @@
 					</div>
 					<div class="discont-row">
 						<div class="discont-row-item">
-							<div class="discont-row-item-gallery-mini">
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
-								<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
-							</div>
-						</div>
-						<div class="discont-row-item">
 							<div class="discont-row-item-gallery-big">
 								<div class="discont-row-item-gallery-big-item">
 									<img src="img/discont-gallery-big-1.png">
@@ -1000,6 +1017,25 @@
 									</div>
 								</div>
 							</div>
+							<div class="discont-row-item-gallery-mini-wrapper">
+								<div class="discont-row-item-gallery-mini">
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-3.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-1.png"></div>
+									<div class="discont-row-item-gallery-mini-item"><img src="img/discont-gallery-mini-2.png"></div>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
+								</div>
+								<div class="discont-row-item-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>								
+							</div>
 						</div>
 						<div class="discont-row-item">
 							<div class="discont-row-item-row">Коллекция: <span class="discont-row-item-row_name">Souls</span></div>
@@ -1021,8 +1057,8 @@
 							</div>
 						</div>
 						<div class="discont-row-item">
-							<div class="discont-row-item-row">
-								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ДОБАВИТЬ В КОРЗИНУ</a>
+							<div class="discont-row-item-row discont-row-item-row_wrap">
+								<a href="#" class="needs-list-item-text__button discont-row-item-row__button">ЗАБРОНИРОВАТЬ</a>
 								<div class="discont-row-item-row-cost">
 									<div class="discont-row-item-row-cost__old"><span class="line-through">47 800</span> ₽</div>
 									<div class="discont-row-item-row-cost__new">35 700 ₽</div>
