--- a/app/mechanics.html
+++ b/app/mechanics.html
@@ -495,8 +495,35 @@
 				<div class="block">
 					<div class="block-head">Механизмы</div>
 					<div class="mech-row">
-						<div class="mech-row-img">
-							<img src="img/mech-1.png">
+						<div class="mech-row-gallery">
+							<div class="mech-row-gallery-big">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
+							<div class="mech-row-gallery-mini">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Дельфин</div>
@@ -508,8 +535,35 @@
 						</div>
 					</div>
 					<div class="mech-row">
-						<div class="mech-row-img">
-							<img src="img/mech-2.png">
+						<div class="mech-row-gallery">
+							<div class="mech-row-gallery-big">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
+							<div class="mech-row-gallery-mini">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Пантограф</div>
@@ -521,8 +575,35 @@
 						</div>
 					</div>
 					<div class="mech-row">
-						<div class="mech-row-img">
-							<img src="img/mech-1.png">
+						<div class="mech-row-gallery">
+							<div class="mech-row-gallery-big">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
+							<div class="mech-row-gallery-mini">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Дельфин</div>
@@ -534,8 +615,35 @@
 						</div>
 					</div>
 					<div class="mech-row">
-						<div class="mech-row-img">
-							<img src="img/mech-2.png">
+						<div class="mech-row-gallery">
+							<div class="mech-row-gallery-big">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
+							<div class="mech-row-gallery-mini">
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-2.png">
+								</div>
+								<div class="mech-row-img">
+									<img src="img/mech-1.png">
+								</div>
+							</div>
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Пантограф</div>
