svg has been added

--- a/app/card.html
+++ b/app/card.html
@@ -622,12 +622,15 @@
 									</div>
 									<div class="card-main-block-description-row card-main-block-description-row_border-bottom">
 										<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Тип обивки:</div>
-										<div class="card-main-block-description-row-item card-main-block-description-row-item_left" data-result><div class="type-item" data-type-number="1" data-cost="10000">Кожа</div></div>
+										<div class="card-main-block-description-row-item card-main-block-description-row-item_left" data-result>
+											<div class="type-item" data-type-number="1" data-cost="10000">Кожа</div>
+											<div class="type-item" data-type-number="2" data-cost="9000">Экокожа</div>
+											<!-- <div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div> -->
+											<div class="type-item" data-type-number="4" data-cost="5000">Ткань</div>
+										</div>
 										<div class="card-main-block-description-row-item card-main-block-description-row-item-ul-horiz">
 											<div class="card-main-block-description-row-item-ul-horiz_wrapper">
-												<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="2" data-cost="9000">Экокожа</div></div>
-												<!-- <div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div> -->
-												<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="4" data-cost="5000">Ткань</div></div>
+												
 											</div>
 										</div>
 										<div class="card-main-block-description-row-item card-main-block-description-row-item__btn-change">
@@ -1280,17 +1283,20 @@
 							</div>
 							<div class="card-main-block-description-row card-main-block-description-row_border-bottom">
 								<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Тип обивки:</div>
-								<div class="card-main-block-description-row-item card-main-block-description-row-item_left" data-result><div class="type-item" data-type-number="1" data-cost="10000">Кожа</div></div>
-								<div class="card-main-block-description-row-item card-main-block-description-row-item-ul-horiz">
+								<div class="card-main-block-description-row-item card-main-block-description-row-item_left" data-result>
+									<div class="type-item" data-type-number="1" data-cost="10000">Кожа</div>
+									<div class="type-item" data-type-number="2" data-cost="9000">Экокожа</div>
+									<div class="type-item" data-type-number="4" data-cost="5000">Ткань</div>
+								</div>
+								<!-- <div class="card-main-block-description-row-item card-main-block-description-row-item-ul-horiz">
 									<div class="card-main-block-description-row-item-ul-horiz_wrapper">
 										<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="2" data-cost="9000">Экокожа</div></div>
-										<!-- <div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="3" data-cost="15000">Велюр</div></div> -->
 										<div class="card-main-block-description-row-item-ul-horiz__item"><div class="type-item" data-type-number="4" data-cost="5000">Ткань</div></div>
 									</div>
-								</div>
-								<div class="card-main-block-description-row-item card-main-block-description-row-item__btn-change">
+								</div> -->
+								<!-- <div class="card-main-block-description-row-item card-main-block-description-row-item__btn-change">
 									Изменить
-								</div>
+								</div> -->
 							</div>
 							<div class="card-main-block-description-row card-main-block-description-row_column card-main-block-description-row_border-bottom">
 								<div class="card-main-block-description-row-wrapper">
