--- a/app/catalog.html
+++ b/app/catalog.html
@@ -1290,8 +1290,7 @@
 										</div>
 										<div class="card-item-row__img">
 											<a href="card.html" target="_blank"><img src="img/item-4.png"></a>
-											<div class="card-item-row-hit">
-														хит
+											<div class="card-item-row-hit card-item-row-hit_mod">
 													</div>
 										</div>
 									</div>
@@ -1494,6 +1493,8 @@
 										</div>
 										<div class="card-item-row__img">
 											<a href="card.html" target="_blank"><img src="img/item-4.png"></a>
+											<div class="card-item-row-hit card-item-row-hit_new">
+													</div>
 										</div>
 									</div>
 									<div class="card-item-row">
@@ -1729,8 +1730,7 @@
 						<div class="catalog-main-gallery-linear">
 							<div class="card-item-linear">
 								<div class="card-item-linear-item card-item-linear-item_img">
-									<div class="card-item-row-hit">
-										хит
+									<div class="card-item-row-hit card-item-row-hit_mod">
 									</div>
 									<img src="img/linear-card.png">
 								</div>
